Исправление кода, добавление новых классов